# 7aychain

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml  security.yml
devnet/: Dockerfile  TEST_PBT.md  docker-compose.dev.yml  docker-compose.hybrid.yml  docker-compose.yml
devnet/scripts/: 7aychain-cli.js  README.md  check-state.js  crypto-tests.js  cybersec-ops.js  dev.sh  laud-cli.py  laud_crypto.py  laud_files.py  laud_registry.py  logs.sh  monitor.sh  package.json  reset.sh  run-native-alice.sh  security-audit.js  setup-validators.js  start.sh  stop.sh  test-pbt-v2.js  test-pbt.js
devnet/scripts/tests/: test_crypto.py  test_files.py  test_presence_vault.py  test_registry.py  test_share_storage.py
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/scanner/: bluetooth.rs  inherent.rs  latency.rs  mock.rs  mod.rs  oui.rs  types.rs  wifi.rs
pallets/autonomous/: Cargo.toml
pallets/autonomous/src/: lib.rs  tests.rs  weights.rs
pallets/boomerang/: Cargo.toml
pallets/boomerang/src/: lib.rs  tests.rs  weights.rs
pallets/device/: Cargo.toml
pallets/device-scanner/: Cargo.toml
pallets/device-scanner/src/: lib.rs  tests.rs  weights.rs
pallets/device/src/: lib.rs  tests.rs  weights.rs
pallets/dispute/: Cargo.toml
pallets/dispute/src/: lib.rs  tests.rs  weights.rs
pallets/epoch/: Cargo.toml
pallets/epoch/src/: lib.rs  tests.rs  weights.rs
pallets/governance/: Cargo.toml
pallets/governance/src/: lib.rs  tests.rs  weights.rs
pallets/lifecycle/: Cargo.toml
pallets/lifecycle/src/: lib.rs  tests.rs  weights.rs
pallets/octopus/: Cargo.toml
pallets/octopus/src/: fusion.rs  lib.rs  tests.rs  weights.rs
pallets/presence/: Cargo.toml
pallets/presence/src/: lib.rs  tests.rs  weights.rs
pallets/semantic/: Cargo.toml
pallets/semantic/src/: lib.rs  tests.rs  weights.rs
pallets/storage/: Cargo.toml
pallets/storage/src/: lib.rs  tests.rs  weights.rs
pallets/triangulation/: Cargo.toml
pallets/triangulation/src/: lib.rs  tests.rs  weights.rs
pallets/validator/: Cargo.toml
pallets/validator/src/: lib.rs  tests.rs  weights.rs
pallets/vault/: Cargo.toml
pallets/vault/src/: lib.rs  tests.rs  weights.rs
pallets/zk/: Cargo.toml
pallets/zk/src/: circuit_tests.rs  ec_vss.rs  groth16.rs  groth16_tests.rs  integration_tests.rs  lib.rs  migration.rs  tests.rs  verifier.rs  weights.rs
pallets/zk/src/circuits/: access.rs  attestation.rs  mod.rs  position.rs  presence.rs  reputation.rs  share.rs  stake.rs  vote.rs
primitives/: Cargo.toml
primitives/src/: constants.rs  crypto.rs  errors.rs  fusion.rs  lib.rs  traits.rs  triangulation.rs  types.rs  witness.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
