# =============================================================================
# 7aychain Primitives - Core Types and Protocol Constants
# =============================================================================
# SPDX-License-Identifier: BUSL-1.1
# Copyright (c) 2026 7ayLabs. All rights reserved.
# =============================================================================

[package]
name = "seveny-primitives"
description = "Core types, constants, and shared traits for the 7ay Proof of Presence Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["blockchain", "substrate", "proof-of-presence", "primitives"]
categories = ["cryptography", "no-std"]

[dependencies]
# Codec
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Substrate primitives
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",
]
runtime-benchmarks = []
try-runtime = []

[lints]
workspace = true
