# =============================================================================
# 7aychain Boomerang Pallet - Bidirectional Path Verification
# =============================================================================
# SPDX-License-Identifier: BUSL-1.1
# Copyright (c) 2026 7ayLabs. All rights reserved.
# =============================================================================

[package]
name = "pallet-boomerang"
description = "Boomerang path verification for bidirectional connectivity proofs in the 7ay Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "substrate", "proof-of-presence", "pallet", "boomerang"]
categories = ["cryptography", "no-std"]

[dependencies]
seveny-primitives = { workspace = true }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "seveny-primitives/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

[lints]
workspace = true
