[package]
name = "pallet-device-scanner"
version = "0.1.0"
description = "Automatic hardware device scanning pallet for 7aychain"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { workspace = true }
seveny-primitives = { workspace = true }
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-inherents/std",
    "sp-io/std",
    "seveny-primitives/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
