[package]
name = "pallet-device"
description = "Device registration and management for the 7ay Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "substrate", "proof-of-presence", "pallet", "device"]
categories = ["cryptography", "no-std"]

[dependencies]
seveny-primitives = { workspace = true }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "seveny-primitives/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

[lints]
workspace = true
