[package]
name = "pallet-zk"
description = "Zero-knowledge proof verification for the 7ay Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["blockchain", "substrate", "proof-of-presence", "pallet", "zk-proofs"]
categories = ["cryptography", "no-std"]

[dependencies]
seveny-primitives = { workspace = true }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
log = { version = "0.4", default-features = false }

# Arkworks ZK dependencies (optional, behind groth16 feature)
ark-groth16 = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-serialize = { workspace = true, optional = true }
ark-ff = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
ark-std = { workspace = true, optional = true }
ark-snark = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

# Std-enabled arkworks for test vector generation
ark-groth16 = { workspace = true, features = ["std"] }
ark-bn254 = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }
ark-ff = { workspace = true, features = ["std"] }
ark-ec = { workspace = true, features = ["std"] }
ark-std = { workspace = true, features = ["std"] }
ark-snark = { workspace = true }
ark-relations = { workspace = true, features = ["std"] }
ark-r1cs-std = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "seveny-primitives/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "ark-groth16?/std",
    "ark-bn254?/std",
    "ark-serialize?/std",
    "ark-ff?/std",
    "ark-ec?/std",
    "ark-std?/std",
]
groth16 = [
    "ark-groth16",
    "ark-bn254",
    "ark-serialize",
    "ark-ff",
    "ark-ec",
    "ark-std",
    "ark-snark",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

[lints]
workspace = true
